# pi4-audio-workstation

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP-MANUAL.md  flake.nix
.claude/: settings.json
.claude/hooks/: pre-compact.sh
.claude/memories/: _index.md  change-management-git.md  d040-architecture-transition.md  nixos-kernel-config.md  orchestrator-discipline.md  pipewire-port-activation.md  pipewire-rt-promotion.md  security-findings.md  session-5-handoff.md
.claude/team/: active-mitigations.md  config.md  consultation-matrix.md  lessons-learned.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
configs/: README.md  test_8ch_loopback.yml
configs/coeffs/: .gitignore
configs/hardware/: amp-mcgrey-pa4504.yml  dac-behringer-ada8200.yml  mic-umik1-7161942.yml
configs/labwc/: rc.xml
configs/level-bridge/: hw-in.env  hw-out.env  sw.env
configs/local-demo/: ada8200-in-loopback.conf  convolver.conf  room-sim-convolver.conf  umik1-loopback.conf
configs/midi/: apcmini-mk2.yml
configs/mixxx/: soundconfig.xml
configs/pcm-bridge/: capture-usb.env  monitor.env
configs/pipewire/: 20-usbstreamer.conf  21-usbstreamer-playback.conf  25-loopback-8ch.conf  30-filter-chain-convolver.conf  80-jack-no-autoconnect.conf
configs/udev/: 90-usbstreamer-lockout.rules
configs/venues/: foh-passthrough.yml  local-demo.yml  markaudio-ultimax-200hz.yml  production.yml
data/: README.md
docs/: user-journeys.md
poc/: README.md  requirements.txt  server.py
results/: README.md
scripts/: README.md  capture-ui-screenshot.py  gen_configs.py  generate-crossover-coeffs.py  generate-dirac-coeffs.py  generate-dirac.py  generate-room-sim-ir.py  local-demo.sh  local-pw-test-env.sh  mixxx-substitute.py  nixos-smoke-test.sh  playwright-mcp.sh  run_benchmarks.sh  screenshot-local-demo.sh  split-monoliths.py  test-e2e.sh  test-integration.sh
src/: Cargo.toml
src/graph-manager/: Cargo.toml
src/graph-manager/src/: gain_integrity.rs  lifecycle.rs  link_audit.rs  main.rs  reconcile.rs  registry.rs  routing.rs  rpc.rs  venue.rs  watchdog.rs
src/pcm-bridge/: Cargo.toml
src/pcm-bridge/src/: main.rs  server.rs
tools/pcm-bridge/: Cargo.toml
tools/pcm-bridge/src/: main.rs
tools/signal-gen/: Cargo.toml
tools/signal-gen/src/: capture.rs  command.rs  generator.rs  main.rs  ramp.rs  registry.rs  rpc.rs  safety.rs
(+957 files in other folders)
