[package]
name = "pi4audio-graph-manager"
version = "0.1.0"
edition = "2021"
description = "PipeWire graph manager — sole session manager for Pi audio workstation routing"
license = "MIT"

[features]
default = ["pipewire-backend"]
pipewire-backend = ["pipewire", "pipewire-sys", "libspa", "spa_sys"]

[dependencies]
pipewire = { version = "0.8", optional = true }
pipewire-sys = { version = "0.8", optional = true }
libspa = { version = "0.8", optional = true }
# Aliased as spa_sys — required by libspa::spa_interface_call_method! macro (GM-7).
spa_sys = { version = "0.8", optional = true, package = "libspa-sys" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
opt-level = 2
strip = true
lto = "thin"
