[package]
name = "pcm-bridge"
version = "0.1.0"
edition = "2021"
description = "PipeWire audio bridge for the web UI (monitor + capture modes)"
license = "MIT"

[dependencies]
pipewire = "0.8"
pipewire-sys = "0.8"
libspa = "0.8"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"

[profile.release]
opt-level = 2
strip = true
lto = "thin"
